--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,8 +52,6 @@
         "react/jsx-max-props-per-line": 0,
         "react/jsx-closing-bracket-location": 0,
         "react/require-default-props": 0,
-        "react/no-children-prop": 0,
-        "prefer-promise-reject-errors": 0,
-        "no-new": 0
+        "react/no-children-prop": 0
     }
 }
